@@ -1,6 +1,13 @@
 Release notes
 =============
 
+master
+------
+
+Improvements:
+
+ - Show commit signatures in the main view. (GH #754)
+
 tig-2.3.3
 ---------
 
